# grpc-python

./: README.md
protobufs/: recommendations.proto
server/: interceptor.py  pyproject.toml  requirements.txt  sample_client_test.py  server.py
